Bug #1348 - Group Docs > New doc > Settings options need spacing adjustme

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1451,7 +1451,23 @@ body{
         } 
     }
     .toggle-content{
+        padding-top: 12px;
         width: 100%;
+    }
+    #toggle-table-settings{
+        .desc-column{
+            vertical-align: top;
+        }
+        tr{
+            td{
+                padding-top: 12px;
+            }
+            &:first-child{
+                td{
+                    padding-top: 0;
+                }
+            }
+        }
     }
 }
 /**forum (bbpress) styles**/
